Add date column.

--- a/reddit_scraper/templates/reddit_scraper/index.html
+++ b/reddit_scraper/templates/reddit_scraper/index.html
@@ -10,9 +10,9 @@
 
 <li><a href="/scraping">Scraping</a>: Scraping tools.</li>
 	<ul>
-	<li><a href="/scraping#postcomments">Timeline</a>: Export comments of one or several reddit posts.</li>
-	<li><a href="/scraping#usercomments">Favorite</a>: Export the last 1000 comments of a reddit user.</li>
-	<li><a href="/scraping#userposts">Genre</a>: Export posts of a reddit user.</li>
+	<li><a href="/scraping#postcomments">Post Comments</a>: Export comments of one or several reddit posts.</li>
+	<li><a href="/scraping#usercomments">User Comments</a>: Export the last 1000 comments of one or several reddit users.</li>
+	<li><a href="/scraping#userposts">User Posts</a>: Export posts of one or several reddit users.</li>
 	</ul>
 </ul>
 
