Add warning about excel.

--- a/reddit_scraper/templates/base.html
+++ b/reddit_scraper/templates/base.html
@@ -5,6 +5,8 @@
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
 
+<meta charset="utf-8">
+<title>Reddit tools</title>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
@@ -24,7 +26,6 @@
           </ul>
         </div>
     </div>
-
 </nav>
 <br>
 
