Add forumlibre component.

--- a/reddit_scraper/templates/base.html
+++ b/reddit_scraper/templates/base.html
@@ -21,7 +21,10 @@
               <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="{% url 'reddit_scraper' %}">Scraping</a>
+              <a class="nav-link" href="{% url 'scraping' %}">Scraping</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'forumlibre' %}">Forum Libre Redirect</a>
             </li>
           </ul>
         </div>
