--- a/reddit_scraper/templates/reddit_scraper/index.html
+++ b/reddit_scraper/templates/reddit_scraper/index.html
@@ -8,12 +8,13 @@
 
 	<p>On this website, you will find several tools to play with reddit data. </p>
 
-<li><a href="/scraping">Scraping</a>: Scraping tools.</li>
+	<li><a href="{% url 'scraping' %}">Scraping</a>: Scraping tools.</li>
 	<ul>
-	<li><a href="/scraping#postcomments">Post Comments</a>: Export comments of one or several reddit posts.</li>
-	<li><a href="/scraping#usercomments">User Comments</a>: Export the last 1000 comments of one or several reddit users.</li>
-	<li><a href="/scraping#userposts">User Posts</a>: Export posts of one or several reddit users.</li>
+		<li><a href="{% url 'scraping'%}#postcomments">Post Comments</a>: Export comments of one or several reddit posts.</li>
+		<li><a href="{% url 'scraping'%}#usercomments">User Comments</a>: Export the last 1000 comments of one or several reddit users.</li>
+		<li><a href="{% url 'scraping'%}#userposts">User Posts</a>: Export posts of one or several reddit users.</li>
 	</ul>
+	<li><a href="{% url 'forumlibre' %}">Forum Libre Redirect</a>: Redirect to the latest Forum Libre on /r/france.</li>
 </ul>
 
 <hr>
