--- a/reddit_scraper/templates/reddit_scraper/index.html
+++ b/reddit_scraper/templates/reddit_scraper/index.html
@@ -12,7 +12,7 @@
 	<ul>
 		<li><a href="{% url 'scraping'%}#postcomments">Post Comments</a>: Export comments of one or several reddit posts.</li>
 		<li><a href="{% url 'scraping'%}#usercomments">User Comments</a>: Export the last 1000 comments of one or several reddit users.</li>
-		<li><a href="{% url 'scraping'%}#userposts">User Posts</a>: Export posts of one or several reddit users.</li>
+		<li><a href="{% url 'scraping'%}#userposts">User Posts</a>: Export the posts of one or several reddit users.</li>
 	</ul>
 	<li><a href="{% url 'forumlibre' %}">Forum Libre Redirect</a>: Redirect to the latest Forum Libre on /r/france.</li>
 </ul>
