--- a/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
+++ b/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
@@ -25,7 +25,7 @@
   <div class="tab-pane fade show active" id="postcomments" role="tabpanel" aria-labelledby="postcomments-tab">
   	  <p>Export a list of comments from a list of reddit posts.</p>
 		<div class="alert alert-warning" role="alert">
-		The exported csv files are best imported with LibreOffice. Excel is not recommended and might cause issues.
+		The csv export format might cause issues with Excel.
 		</div>
   	  <form action="" method="post" class="form">
     	{% csrf_token %}
@@ -38,7 +38,7 @@
   <div class="tab-pane fade" id="usercomments" role="tabpanel" aria-labelledby="usercomments-tab">
   	  <p>Export the last 1000 comments of one or several reddit users.</p>
 		<div class="alert alert-warning" role="alert">
-		The exported csv files are best imported with LibreOffice. Excel is not recommended and might cause issues.
+		The csv export format might cause issues with Excel.
 		</div>
 	<form action="" method="post" class="form">
     	{% csrf_token %}
