Add psaw use, update dependencies.

--- a/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
+++ b/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
@@ -36,7 +36,7 @@
 	</form>
 </div>
   <div class="tab-pane fade" id="usercomments" role="tabpanel" aria-labelledby="usercomments-tab">
-  	  <p>Export the last 1000 comments of one or several reddit users.</p>
+  	  <p>Export the comments of one or several reddit users.</p>
 		<div class="alert alert-warning" role="alert">
 		The csv export format might cause issues with Excel.
 		</div>
