Add API choices, remove duplicate code.

--- a/reddit_scraper/templates/reddit_scraper/index.html
+++ b/reddit_scraper/templates/reddit_scraper/index.html
@@ -8,6 +8,8 @@
 
 	<p>On this website, you will find several tools to play with reddit data. </p>
 
+	<p>For several export tools, you can select to use either the reddit normal API or the <a href="https://pushshift.io">pushshift API</a>. The pushshift API might be able to extract deleted content from reddit, but the scores might be mismatched.</p>
+
 	<li><a href="{% url 'scraping' %}">Scraping</a>: Scraping tools.</li>
 	<ul>
 		<li><a href="{% url 'scraping'%}#postcomments">Post Comments</a>: Export comments of one or several reddit posts.</li>
