--- a/reddit_scraper/templates/base.html
+++ b/reddit_scraper/templates/base.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 {# Load the tag library #}
 {% load bootstrap4 %}
 
@@ -5,9 +8,27 @@
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
 
+<!-- Matomo -->
+<script type="text/javascript">
+  var _paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="//matomo.tools.dbeley.ovh/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '2']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
+
 <meta charset="utf-8">
 <title>Reddit tools</title>
+</head>
 
+<body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="{% url 'index' %}">reddit tools</a>
@@ -35,3 +56,5 @@
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
+</body>
+</html>
