--- a/reddit_scraper/templates/reddit_scraper/index.html
+++ b/reddit_scraper/templates/reddit_scraper/index.html
@@ -8,8 +8,14 @@
 
 	<p>On this website, you will find several tools to play with reddit data. </p>
 
+	{% comment %}
 	<div class="alert alert-info" role="alert">
 	You can select to use either the reddit normal API or the <a href="https://pushshift.io">pushshift API</a>. The pushshift API might be able to extract deleted content from reddit, but the scores might be mismatched.
+	</div>
+	{% endcomment %}
+
+	<div class="alert alert-info" role="alert">
+		The data is extracted with the help of the <a href="https://pushshift.io">Pushshift API</a>.
 	</div>
 
 	<div class="alert alert-warning" role="alert">
