--- a/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
+++ b/reddit_scraper/templates/reddit_scraper/reddit_scraper.html
@@ -8,71 +8,19 @@
 {% bootstrap_javascript jquery='full' %}
 
 {% block page_content %}
-<h1>Reddit scraping</h3>
+<h1>Reddit scraping</h1>
 <hr>
 
 <ul class="nav nav-pills mb-3" id="tab" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" id="postcomments-tab" data-toggle="pill" href="#postcomments" role="tab" aria-controls="postcomments" aria-selected="true">Post Comments</a>
+    <a class="nav-link active" id="comments-tab" data-toggle="pill" href="#comments" role="tab" aria-controls="comments" aria-selected="false">Comments</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" id="usercomments-tab" data-toggle="pill" href="#usercomments" role="tab" aria-controls="usercomments" aria-selected="false">User Comments</a>
+    <a class="nav-link" id="posts-tab" data-toggle="pill" href="#posts" role="tab" aria-controls="posts" aria-selected="false">Posts</a>
   </li>
-  <li class="nav-item">
-    <a class="nav-link" id="userposts-tab" data-toggle="pill" href="#userposts" role="tab" aria-controls="userposts" aria-selected="false">User Posts</a>
 </ul>
 <div class="tab-content" id="pills-tabContent">
-  <div class="tab-pane fade show active" id="postcomments" role="tabpanel" aria-labelledby="postcomments-tab">
-  	  <p>Export a list of comments from a list of reddit posts.</p>
-  	  <form action="" method="post" class="form">
-    	{% csrf_token %}
-    	{% bootstrap_form formpostcomments layout='inline' %}
-    	{% buttons %}
-        	<button type="submit" name="formpostcomments" class="btn btn-primary">Submit</button>
-    	{% endbuttons %}
-	</form>
-</div>
-  <div class="tab-pane fade" id="usercomments" role="tabpanel" aria-labelledby="usercomments-tab">
-  	  <p>Export the comments of one or several reddit users.</p>
-	<form action="" method="post" class="form">
-    	{% csrf_token %}
-    	{% bootstrap_form formusercomments layout='inline' %}
-    	{% buttons %}
-        	<button type="submit" name="formusercomments" class="btn btn-primary">Submit</button>
-    	{% endbuttons %}
-	</form>
-</div>
-  <div class="tab-pane fade" id="userposts" role="tabpanel" aria-labelledby="userposts-tab">
-  	  <p>Export the posts of one or several reddit users.</p>
-	<form action="" method="post" class="form">
-    	{% csrf_token %}
-    	{% bootstrap_form formuserposts layout='inline' %}
-    	{% buttons %}
-        	<button type="submit" name="formuserposts" class="btn btn-primary">Submit</button>
-    	{% endbuttons %}
-	</form>
-</div>
-  <div class="tab-pane fade" id="subredditcomments" role="tabpanel" aria-labelledby="subredditcomments-tab">
-  	  <p>Export comments.</p>
-	<form action="" method="post" class="form">
-    	{% csrf_token %}
-    	{% bootstrap_form formsubredditcomments layout='inline' %}
-    	{% buttons %}
-        	<button type="submit" name="formsubredditcomments" class="btn btn-primary">Submit</button>
-    	{% endbuttons %}
-	</form>
-</div>
-  <div class="tab-pane fade" id="subredditposts" role="tabpanel" aria-labelledby="subredditposts-tab">
-  	  <p>Export posts.</p>
-	<form action="" method="post" class="form">
-    	{% csrf_token %}
-    	{% bootstrap_form formsubredditposts layout='inline' %}
-    	{% buttons %}
-        	<button type="submit" name="formsubredditposts" class="btn btn-primary">Submit</button>
-    	{% endbuttons %}
-	</form>
-</div>
-  <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="comments-tab">
+  <div class="tab-pane fade show active" id="comments" role="tabpanel" aria-labelledby="comments-tab">
   	  <p>Export comments.</p>
 	<form action="" method="post" class="form">
     	{% csrf_token %}
@@ -81,7 +29,7 @@
         	<button type="submit" name="formcomments" class="btn btn-primary">Submit</button>
     	{% endbuttons %}
 	</form>
-</div>
+  </div>
   <div class="tab-pane fade" id="posts" role="tabpanel" aria-labelledby="posts-tab">
   	  <p>Export posts.</p>
 	<form action="" method="post" class="form">
@@ -91,5 +39,6 @@
         	<button type="submit" name="formposts" class="btn btn-primary">Submit</button>
     	{% endbuttons %}
 	</form>
+  </div>
 </div>
 {% endblock %}
