--- a/reddit_scraper/templates/base.html
+++ b/reddit_scraper/templates/base.html
@@ -16,10 +16,10 @@
   _paq.push(['enableLinkTracking']);
   (function() {
     var u="//matomo.tools.dbeley.ovh/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setTrackerUrl', u+'js/']);
     _paq.push(['setSiteId', '2']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'js/'; s.parentNode.insertBefore(g,s);
   })();
 </script>
 <!-- End Matomo Code -->
