--- a/reddit_scraper/templates/base.html
+++ b/reddit_scraper/templates/base.html
@@ -15,7 +15,7 @@
   _paq.push(['trackPageView']);
   _paq.push(['enableLinkTracking']);
   (function() {
-    var u="//matomo.tools.dbeley.ovh/";
+    var u="//matomo.dbeley.ovh/";
     _paq.push(['setTrackerUrl', u+'js/']);
     _paq.push(['setSiteId', '2']);
     var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
